score visible but more timing issues

--- a/Live/style.css
+++ b/Live/style.css
@@ -132,3 +132,8 @@ canvas {
 #recordingSliderDiv {
     white-space: nowrap;
 }
+
+.score {
+    font-family: 'Press Start 2P', cursive;
+    width: fit-content;
+}
